Fix overflow

--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -480,7 +480,7 @@ input {
   display: flex;
   flex-direction: column;
   padding-bottom: 5%;
-  overflow: scroll;
+  overflow: auto;
 }
 
 .contact-header {
@@ -498,7 +498,7 @@ input {
   width: 100%;
   background-color: #dcd6cde6;
   display: grid;
-  overflow: scroll;
+  overflow: auto;
 }
 
 .form {
